fixed spacing and styling issues

--- a/weather/locations/css/main.css
+++ b/weather/locations/css/main.css
@@ -37,6 +37,7 @@ header {
   align-items: center;
   justify-content: center;
   padding: 3vw 0;
+  margin-bottom: .5em;
 }
 
 header>img {
@@ -122,12 +123,23 @@ main section {
   background-color: #253A67;
 }
 
+main section h2 {
+  margin: .5em .5em 0 .5em;
+}
+
 .location {
   background-color: #2c4e99;
 }
 
 .location h1 {
+  font-size: 3.1em;
   margin: .5em .5em 0 .5em;
+}
+
+.gps-coords {
+  color: greenyellow;
+  margin: .5em 1.5em 1.5em 1.5em;
+  padding: 0;  
 }
 
 /* footer */
