--- a/weather/locations/css/medium.css
+++ b/weather/locations/css/medium.css
@@ -7,6 +7,7 @@
   /* header */
   header {
     margin-bottom: .5em;
+    padding: 1em 0;
   }
   header>img {
     max-width: 5em;
